2014-08-24  Rhys Kidd  <rhyskidd@gmail.com>

    * khmer/thread_utils.py, sandbox/filter-below-abund.py,
	scripts/{extract-long-sequences,load-graph,load-into-counting,
	normalize-by-median,split-paired-reads}.py,
	scripts/galaxy/gedlab.py: fix minor PyLint issues 

2014-08-20  Michael R. Crusoe  <mcrusoe@msu.edu>

    * test/test_version.py: add Python2.6 compatibility.

2014-08-20  Rhys Kidd  <rhyskidd@gmail.com>

    * setup.py,README.rst,doc/user/install.txt: Test requirement for a 
    64-bit operating system, documentation changes. Fixes #529

2014-08-19  Michael R. Crusoe  <mcrusoe@msu.edu>

    * {setup,versioneer,khmer/_version}.py: upgrade versioneer from 0.10 to 0.11

2014-08-18  Michael R. Crusoe  <mcrusoe@msu.edu>

    * setup.py: Use the system bz2 and/or zlib libraries if specified in
    setup.cfg or overridden on the commandline

2014-08-06  Michael R. Crusoe  <mcrusoe@msu.edu>

    * CITATION: fixed formatting, added BibTeX
    * Makefile: Python code coverage targets will now compile khmer if needed
    * doc/dev/galaxy.txt: moved to doc/user/; updated & simplified
    * doc/{dev,user}/index.txt: galaxy.txt move
    * scripts/*.xml: moved to scripts/galaxy/; citations added; additional
    scripts wrapped
    * scripts/galaxy/README.txt: documented Galaxy codebase requirements
    * doc/citations.txt: symlink to CITATION
    * scripts/galaxy/test-data: added symlinks to files in tests/test-data or
    added short test files from scratch
    * scripts/galaxy/macros.xml: common configuration moved to central file
    * scripts/galaxy/gedlab.py: custom Galaxy datatypes for the counting
    tables and presence tables: it inherits from the Galaxy Binary type but
    isn't sniffable. Written with GalaxyTeam's Dave_B.
    * scripts/filter-abund.py: fix inaccurate parameter description
    * scripts/galaxy/tool_dependencies.xml: document install process
    * scripts/galaxy/filter-below-abund.py: symlink to
    sandbox/filter-below-abund.py for now.